initial commit and added VideoCard.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Career from "../components/Career.astro";
 import IntroCard from "../components/IntroCard.astro";
 import AboutMe from "../components/AboutMe.astro";
 import Now from "../components/Now.astro";
+import VideoCard from "../components/VideoCard.astro";
 import { FOOTER,METADATA } from "../lib/constants";
 ---
 
@@ -39,7 +40,8 @@ import { FOOTER,METADATA } from "../lib/constants";
   >
     <IntroCard />
     <AboutMe />
-    <Career />
+    <VideoCard />
+    <!--<Career />-->
     <Now />
     <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
       <p class="text-xs">
