--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,14 +39,14 @@ import { FOOTER,METADATA } from "../lib/constants";
     class="text-white m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[800px]"
   >
     <IntroCard />
-    <AboutMe />
+    <!--<AboutMe />-->
     <VideoCard />
     <!--<Career />-->
-    <Now />
-    <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
-      <p class="text-xs">
-        {FOOTER.footer}
-      </p>
-    </Card>
+    <!--<Now />-->
+    <!--<Card colSpan="md:col-span-1" rowSpan="md:row-span-1">-->
+    <!--  <p class="text-xs">-->
+    <!--    {FOOTER.footer}-->
+    <!--  </p>-->
+    <!--</Card>-->
   </main>
 </Layout>
