--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -1,7 +1,7 @@
 ---
 import Card from "./Card/index.astro";
 import Button from "./Button.astro";
-import { LINKS, WELCOME, METADATA } from "../lib/constants";
+import { LINKS, WELCOME, EVENT_METADATA } from "../lib/constants";
 import { Icon } from 'astro-icon/components';
 import { Image } from "astro:assets";
 import portfolioImage from '../assets/me.webp'
@@ -32,7 +32,7 @@ import portfolioImage from '../assets/me.webp'
       height="300"
       src={portfolioImage}
       class="w-auto max-h-[300px] select-none absolute right-[-50px] bottom-[-70px] z-[-1] opacity-50 md:opacity-100 md:relative md:right-[-50px] md:bottom-auto md:z-auto pointer-events-none shadow-border"
-      alt={`${METADATA.name}`}
+      alt={`${EVENT_METADATA.name}`}
     />
   </div>
 </Card>
