--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card/index.astro";
-import Career from "../components/Career.astro";
 import IntroCard from "../components/IntroCard.astro";
-import AboutMe from "../components/AboutMe.astro";
-import Now from "../components/Now.astro";
 import VideoCard from "../components/VideoCard.astro";
-import { FOOTER,METADATA } from "../lib/constants";
+import { FOOTER,EVENT_METADATA } from "../lib/constants";
 ---
 
 <script>
@@ -32,21 +29,18 @@ import { FOOTER,METADATA } from "../lib/constants";
 </script>
 
 <Layout
-  title={METADATA.title}
-  description={METADATA.description}
+  title={EVENT_METADATA.name}
+  description={EVENT_METADATA.description}
 >
   <main
     class="text-white m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[800px]"
   >
     <IntroCard />
-    <!--<AboutMe />-->
     <VideoCard />
-    <!--<Career />-->
-    <!--<Now />-->
-    <!--<Card colSpan="md:col-span-1" rowSpan="md:row-span-1">-->
-    <!--  <p class="text-xs">-->
-    <!--    {FOOTER.footer}-->
-    <!--  </p>-->
-    <!--</Card>-->
+    <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
+      <p class="text-xs">
+        {FOOTER.footer}
+      </p>
+    </Card>
   </main>
 </Layout>
