added blog feature for lyrics

--- a/src/components/VideoCard.astro
+++ b/src/components/VideoCard.astro
@@ -1,7 +1,7 @@
 ---
 import Card from "./Card/index.astro";
 import { VIDEO_CARD } from "../lib/constants";
-import { YouTube } from '@astro-community/astro-embed-youtube'
+import { YouTube } from 'astro-embed'
 ---
 
 <Card colSpan="md:col-span-2" rowSpan="md:row-span-4">
