changed hero pic

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import { FOOTER,EVENT_METADATA } from "../lib/constants";
     <Card
       colSpan="md:col-span-1"
       rowSpan="md:row-span-2 flex gap-4"
-      title="Blog"
+      title="Lyrics"
       href="/blog"
     />
     <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
