--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import { FOOTER,EVENT_METADATA } from "../lib/constants";
     <Card
       colSpan="md:col-span-1"
       rowSpan="md:row-span-2 flex gap-4"
-      title="Lyrics"
+      title="Click for Lyrics"
       href="/blog"
     />
     <ImageCard />
