--- a/src/layouts/BasicLayout.astro
+++ b/src/layouts/BasicLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { EVENT_METADATA, ORGANIZER_METADATA, TICKET_METADATA } from "../lib/constants";
+import { METADATA, LINKS } from "../lib/constants";
 
 interface Props {
     title: string;
@@ -17,40 +17,24 @@ const image = `${Astro.url.origin}/preview.jpg`;
 
 const schema = {
     "@context": "http://schema.org",
-    "@type": "Event",
-    "name": EVENT_METADATA.name, // Name of the event
-    "startDate": EVENT_METADATA.startDate, // Start date of the event in ISO 8601 format
-    "endDate": EVENT_METADATA.endDate, // End date of the event in ISO 8601 format
-    "eventAttendanceMode": "https://schema.org/" + EVENT_METADATA.attendanceMode, // Attendance mode: OnlineEventAttendanceMode, OfflineEventAttendanceMode, or MixedEventAttendanceMode
-    "eventStatus": "https://schema.org/" + EVENT_METADATA.status, // Event status: EventScheduled, EventCancelled, EventPostponed, EventRescheduled
-    "location": {
-        "@type": "Place",
-        "name": EVENT_METADATA.locationName, // Name of the location
-        "address": {
-            "@type": "PostalAddress",
-            "streetAddress": EVENT_METADATA.streetAddress, // Street address
-            "addressLocality": EVENT_METADATA.addressLocality, // City
-            "addressRegion": EVENT_METADATA.addressRegion, // State or region
-            "postalCode": EVENT_METADATA.postalCode, // Postal code
-            "addressCountry": EVENT_METADATA.addressCountry // Country
-        }
+    "@type": "Organization",
+    "name": METADATA.name, // Name of the organization
+    "url": METADATA.site_url, // URL of the organization
+    "sameAs": LINKS.map(item => item.link), // Social media profiles
+    "logo": METADATA.image_url, // URL to an image of the organization's logo
+    "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": METADATA.contact_phone,
+        "contactType": "Customer Service"
     },
-    "image": EVENT_METADATA.image_url, // URL of the event image
-    "description": EVENT_METADATA.description, // Description of the event
-    "url": EVENT_METADATA.site_url, // URL of the event page
-    "organizer": {
-        "@type": "Organization",
-        "name": ORGANIZER_METADATA.name, // Name of the organizer
-        "url": ORGANIZER_METADATA.url // URL of the organizer
-    },
-    "offers": {
-        "@type": "Offer",
-        "url": TICKET_METADATA.url, // URL to purchase tickets
-        "price": TICKET_METADATA.price, // Ticket price
-        "priceCurrency": TICKET_METADATA.currency, // Currency of the ticket price
-        "availability": "https://schema.org/" + TICKET_METADATA.availability, // Availability: InStock, OutOfStock, PreOrder
-        "validFrom": TICKET_METADATA.validFrom // ISO 8601 date when the tickets go on sale
-    },
+    "address": {
+        "@type": "PostalAddress",
+        "streetAddress": METADATA.street_address,
+        "addressLocality": METADATA.city,
+        "addressRegion": METADATA.state,
+        "postalCode": METADATA.postal_code,
+        "addressCountry": METADATA.country
+    }
 };
 
 ---
@@ -72,7 +56,7 @@ const schema = {
     <meta property="og:url" content={Astro.url.origin}/>
     <meta
             property="og:image"
-            content={image || EVENT_METADATA.image_url}
+            content={image || METADATA.image_url}
     />
     <!-- Basic Twitter Card tags -->
     <meta name="twitter:card" content="summary_large_image"/>
@@ -80,7 +64,7 @@ const schema = {
     <meta name="twitter:description" content={description}/>
     <meta
             name="twitter:image"
-            content={image || EVENT_METADATA.image_url}
+            content={image || METADATA.image_url}
     />
 
     <link rel="preconnect" href="https://cdn.fontshare.com"/>
