--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,6 +3,9 @@ import { getCollection } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
 import PostRow from "../../components/Blog/PostRow.astro";
 
+import { METADATA } from "../../lib/constants";
+import portfolioImage from '../../assets/me.webp'
+
 const posts = (await getCollection("blog"))?.sort(
   (blogEntryA, blogEntryB) =>
     (blogEntryB.data.pubDate || new Date()).getTime() -
@@ -20,8 +23,8 @@ const posts = (await getCollection("blog"))?.sort(
 </script>
 
 <Layout
-  title="Jade Dew RN - Blog"
-  description="Jade Dew RN"
+  title= {METADATA.name}
+  description={METADATA.description}
 >
   <main
     class="w-screen h-screen flex flex-col justify-start items-start max-w-3xl mx-auto p-8"
@@ -31,7 +34,7 @@ const posts = (await getCollection("blog"))?.sort(
       class="text-white bg-neutral-900 hover:bg-neutral-800 px-4 py-2 mb-8 border-1 border-solid border-neutral-600 rounded-lg"
       >Back</a
     >
-    <h1 class="text-4xl font-bold mb-4 text-neutral-100">Posts</h1>
+    <h1 class="text-4xl font-bold mb-4 text-neutral-100">Lyrics</h1>
     <ul class="w-full">
       {
         posts?.map((post) => (
@@ -39,6 +42,7 @@ const posts = (await getCollection("blog"))?.sort(
             title={post.data.title || "No title"}
             date={post.data.pubDate || new Date()}
             url={post.slug}
+            customData={post.data.customData || portfolioImage}
           />
         ))
       }
