--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -27,7 +27,7 @@ import portfolioImage from '../assets/me.webp'
         ))}
       </div>
     </div>
-    <div class="flex">
+    <div class="flex flex-col">
       <Image
         width="300"
         height="300"
