--- a/src/layouts/LayoutBlogPost.astro
+++ b/src/layouts/LayoutBlogPost.astro
@@ -1,56 +1,52 @@
 ---
-import { formatDate } from "../lib/helpers";
-import type { MarkdownLayoutProps } from "astro";
+import {formatDate} from "../lib/helpers";
+import type {MarkdownLayoutProps} from "astro";
 import BasicLayout from "./BasicLayout.astro";
-import { METADATA } from "../lib/constants";
-import { YouTube } from "astro-embed";
+import {METADATA} from "../lib/constants";
+import {YouTube} from "astro-embed";
 
 type Props = MarkdownLayoutProps<{
-  title: string;
-  description: string;
-  pubDate: string;
-  minutesRead: string;
-  customData: string;
+    title: string; description: string; pubDate: string; minutesRead: string; customData: string;
 }>;
 
-const { slug } = Astro.params;
-const { frontmatter } = Astro.props;
+const {slug} = Astro.params;
+const {frontmatter} = Astro.props;
 ---
 
 <BasicLayout
-  frontmatter={frontmatter}
-  slug={slug}
-  page="blog"
-  title={`${METADATA.name} - ${frontmatter.title}`}
-  description={frontmatter.description}
-  customData={frontmatter.customData}
-  youtube_id={frontmatter.youtube_id}
+        frontmatter={frontmatter}
+        slug={slug}
+        page="blog"
+        title={`${METADATA.name} - ${frontmatter.title}`}
+        description={frontmatter.description}
+        customData={frontmatter.customData}
+        youtube_id={frontmatter.youtube_id}
 >
-  <main class="mx-auto max-w-3xl w-full h-screen p-8 text-neutral-100">
-    <a
-      href="/blog"
-      class="text-white bg-neutral-900 hover:bg-neutral-800 px-4 py-2 border-1 border-solid border-neutral-600 rounded-lg mb-8"
-      >Back</a
-    >
-    <div class="my-10">
-      <h1 class="text-5xl font-semibold">{frontmatter.title}</h1>
-      <div class="flex justify-between pt-4 text-gray-500 text-sm">
-        <p>{new Date(frontmatter.pubDate).getFullYear()}</p>
-        <p>{frontmatter.minutesRead}</p>
-      </div>
-    </div>
-    <div class="flex flex-col gap-2">
-      <YouTube
-        id={frontmatter.youtube_id}
-        title={frontmatter.title}
-        playlabel={`Play the video ${frontmatter.title}`}
-        poster={frontmatter.customData}
-      />
-    </div>
-    <div class="flex flex-col pt-4">
-      <article class="prose prose-p:text-red-500 prose-slate prose-invert">
-        <slot />
-      </article>
-    </div>
-  </main>
+    <main class="mx-auto max-w-3xl w-full h-screen p-8 text-neutral-100">
+        <a
+                href="/blog"
+                class="text-white bg-neutral-900 hover:bg-neutral-800 px-4 py-2 border-1 border-solid border-neutral-600 rounded-lg mb-8"
+        >Back</a
+        >
+        <div class="my-10">
+            <h1 class="text-5xl font-semibold">{frontmatter.title}</h1>
+            <div class="flex justify-between pt-4 text-gray-500 text-sm">
+                <p>{new Date(frontmatter.pubDate).getFullYear()}</p>
+                <p>{frontmatter.minutesRead}</p>
+            </div>
+        </div>
+        <div class="flex flex-col gap-2">
+            <YouTube
+                    id={frontmatter.youtube_id}
+                    title={frontmatter.title}
+                    playlabel={`Play the video ${frontmatter.title}`}
+                    poster={frontmatter.customData}
+            />
+        </div>
+        <div class="flex flex-col pt-4">
+            <article class="prose prose-p:text-red-500 prose-slate prose-invert">
+                <slot/>
+            </article>
+        </div>
+    </main>
 </BasicLayout>
