--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,51 +4,42 @@ import Card from "../components/Card/index.astro";
 import IntroCard from "../components/IntroCard.astro";
 import VideoCard from "../components/VideoCard.astro";
 import ImageCard from "../components/ImageCard.astro";
-import { FOOTER,METADATA } from "../lib/constants";
+import {FOOTER, METADATA} from "../lib/constants";
 ---
 
 <script>
-  import { stagger, spring, timeline, type TimelineDefinition } from "motion";
-  import { loaderAnimation } from "../lib/constants";
-  const cards = document.querySelectorAll(".card");
+    import {stagger, spring, timeline, type TimelineDefinition} from "motion";
+    import {loaderAnimation} from "../lib/constants";
 
-  const sequence = [
-    loaderAnimation,
-    [
-      cards,
-      { y: ["40%", "0%"], opacity: [0, 1] },
-      {
-        at: "-0.1",
-        duration: 0.4,
-        delay: stagger(0.3),
-        easing: spring({ velocity: 100, stiffness: 50, damping: 10 }),
-      },
-    ],
-  ];
+    const cards = document.querySelectorAll(".card");
 
-  timeline(sequence as TimelineDefinition);
+    const sequence = [loaderAnimation, [cards, {y: ["40%", "0%"], opacity: [0, 1]}, {
+        at: "-0.1", duration: 0.4, delay: stagger(0.3), easing: spring({velocity: 100, stiffness: 50, damping: 10}),
+    },],];
+
+    timeline(sequence as TimelineDefinition);
 </script>
 
 <Layout
-  title={METADATA.name}
-  description={METADATA.description}
+        title={METADATA.name}
+        description={METADATA.description}
 >
-  <main
-    class="text-white m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[800px]"
-  >
-    <IntroCard />
-    <VideoCard />
-    <Card
-      colSpan="md:col-span-1"
-      rowSpan="md:row-span-2 flex gap-4"
-      title="🎵 Click for Lyrics"
-      href="/blog"
-    />
-    <ImageCard />
-    <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
-      <p class="text-xs">
-        {FOOTER.footer}
-      </p>
-    </Card>
-  </main>
+    <main
+            class="text-white m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[800px]"
+    >
+        <IntroCard/>
+        <VideoCard/>
+        <Card
+                colSpan="md:col-span-1"
+                rowSpan="md:row-span-2 flex gap-4"
+                title="🎵 Click for Lyrics"
+                href="/blog"
+        />
+        <ImageCard/>
+        <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
+            <p class="text-xs">
+                {FOOTER.footer}
+            </p>
+        </Card>
+    </main>
 </Layout>
