--- a/src/components/Blog/PostRow.astro
+++ b/src/components/Blog/PostRow.astro
@@ -23,7 +23,7 @@ const {title, date, url, customData} = Astro.props;
                     {title}
                 </h6>
                 <h6 class="m-0 font-light text-xl">
-                    {new Date(date).getFullYear()}
+                    Year {new Date(date).getFullYear()}
                 </h6>
             </div>
             <div class="flex flex-col">
