--- a/src/components/Blog/PostRow.astro
+++ b/src/components/Blog/PostRow.astro
@@ -19,7 +19,7 @@ const {title, date, url, customData} = Astro.props;
                 href={`/blog/${url}`}
         >
             <div class="flex flex-col h-full">
-                <h6 class="m-0 font-light text-xl">
+                <h6 class="m-0 font-bold text-xl">
                     {title}
                 </h6>
                 <h6 class="m-0 font-light text-xl">
