--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import {FOOTER, METADATA} from "../lib/constants";
         <Card
                 colSpan="md:col-span-1"
                 rowSpan="md:row-span-2 flex gap-4"
-                title="🎵 Click for Lyrics"
+                title="🎵 More Songs and Lyrics"
                 href="/blog"
         />
         <ImageCard/>
