--- a/src/components/Blog/PostRow.astro
+++ b/src/components/Blog/PostRow.astro
@@ -15,7 +15,7 @@ const {title, date, url, customData} = Astro.props;
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-3">
     <li class="w-full text-neutral-100 hover:text-neutral-400 ease-in-out transition-colors my-2">
         <a
-                class="text-base md:text-base decoration-none flex justify-between"
+                class="text-base text-white md:text-base decoration-none flex justify-between"
                 href={`/blog/${url}`}
         >
             <div class="flex flex-col h-full">
